# sparselab_folked_20190321

./: .buildinfo  .gitignore  LICENSE  README.md  configure  configure.ac  genindex.html  index.html  makefile  makefile.in  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py
_autodoc/: sparselab.html
_sources/_autodoc/: sparselab.rst.txt
_sources/_static/: install.rst.txt
_static/: documentation_options.js  install.html  install.rst
docs/: conf.py
docs/_static/: install.rst
doctrees/: environment.pickle  index.doctree
doctrees/_autodoc/: sparselab.doctree
doctrees/_static/: install.doctree
html/: index.html  searchindex.js
html/_static/: install.html
sparselab/: __init__.py  ft.py  imaging.py  imdata.py  mfista.py  mfista_ft.py  util.py  uvdata.py
sparselab/geomodel/: geomodel.py  geomodel_sp.py
sparselab/imaging/: __init__.py  lbfgs_dft.py  lbfgs_fft.py  lbfgs_fft3d.py  lbfgs_fft3d_tmp.py  mfista_dft.py  mfista_fft.py
sparselab/imdata/: __init__.py  imdata.py  imdata_new.py  imregion.py  movie.py
sparselab/modelfit/: __init__.py  geomodel.py  geomodel_sp.py  geomodel_theano.py
sparselab/uvdata/: __init__.py  uvfits_new.py
sparselab/uvdata/cltable/: __init__.py  cltable.py
sparselab/uvdata/uvfits/: __init__.py  uvfits.py
sparselab/uvdata/uvtable/: __init__.py  bstable.py  catable.py  gvistable.py  tools.py  uvtable.py  vistable.py
src/finufft/: makefile.in
src/fortlib/: coord.f90  dftim2d.f90  fftim2d.f90  fftim3d.f90  fftlib.f90  image.f90  image3d.f90  makefile.in  param.f90  uvdata.f90
src/lbfgsb/: makefile.in
src/mfista/: makefile.in  mfista_dft_lib.c  mfista_fft_lib.c
src/slsqp/: makefile.in
